--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dc-water-mark",
   "version": "1.0.0",
   "description": "在项目中添加水印功能",
-  "main": "./src/index.js",
+  "main": "./libs/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
